--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^4.0.2",
     "styled-components": "^5.2.0",
     "subscriptions-transport-ws": "^0.9.18"
   },
