--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kache",
+  "name": "Connect with your neighbour",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "fav_9X3_icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
