--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
+    "aws-sdk": "^2.843.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
